RESOLVED FIXED205052
[Win] Fix MSVC warning C4701: potentially uninitialized local variable 'x' used
https://bugs.webkit.org/show_bug.cgi?id=205052
Summary [Win] Fix MSVC warning C4701: potentially uninitialized local variable 'x' used
Fujii Hironori
Reported 2019-12-09 23:54:50 PST
> Source\WebDriver\Session.cpp(747) : warning C4701: potentially uninitialized local variable 'x' used > Source\WebDriver\Session.cpp(748) : warning C4701: potentially uninitialized local variable 'y' used > Source\WebDriver\Session.cpp(749) : warning C4701: potentially uninitialized local variable 'width' used > Source\WebDriver\Session.cpp(750) : warning C4701: potentially uninitialized local variable 'height' used > Source\WebDriver\Session.cpp(1005) : warning C4701: potentially uninitialized local variable 'inViewCenterPointY' used > Source\WebCore\platform\graphics\cairo\CairoOperations.cpp(647) : warning C4701: potentially uninitialized local variable 'cairoCap' used > Source\WebCore\platform\graphics\cairo\CairoOperations.cpp(672) : warning C4701: potentially uninitialized local variable 'cairoJoin' used > Source\WebCore\platform\network\NetworkStorageSession.cpp(126) : warning C4715: 'WebCore::NetworkStorageSession::shouldBlockCookies': not all control paths return a value > Source\WebKit\NetworkProcess\Classifier\ResourceLoadStatisticsMemoryStore.cpp(905) : warning C4701: potentially uninitialized local variable 'window' used > Source\WebKit\NetworkProcess\Classifier\ResourceLoadStatisticsStore.cpp(521) : warning C4701: potentially uninitialized local variable 'operatingDatesWindowInDays' used > Source\WebKit\NetworkProcess\Classifier\ResourceLoadStatisticsDatabaseStore.cpp(2184) : warning C4701: potentially uninitialized local variable 'window' used
Attachments
Patch (8.87 KB, patch)
2019-12-10 00:00 PST, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2019-12-10 00:00:50 PST
Fujii Hironori
Comment 2 2019-12-10 17:53:20 PST
Comment on attachment 385241 [details] Patch Clearing flags on attachment: 385241 Committed r253359: <https://trac.webkit.org/changeset/253359>
Fujii Hironori
Comment 3 2019-12-10 17:53:24 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-12-10 17:54:47 PST
Note You need to log in before you can comment on or make changes to this bug.