[Win] Fix MSVC warning C4701: potentially uninitialized local variable 'x' used https://bugs.webkit.org/show_bug.cgi?id=205052

Reviewed by Don Olmstead.

Source/WebCore:

* platform/graphics/cairo/CairoOperations.cpp:
(WebCore::Cairo::setLineCap): Zero-initialize a local variable cairoCap.
(WebCore::Cairo::setLineJoin): Zero-initialize a local variable cairoJoin
* platform/network/NetworkStorageSession.cpp:
(WebCore::NetworkStorageSession::shouldBlockCookies const): Added
ASSERT_NOT_REACHED() and return false at the end of the function.

Source/WebDriver:

* Session.cpp:
(WebDriver::Session::getToplevelBrowsingContextRect):
(WebDriver::Session::computeElementLayout):
Zero-initialized local variables.

Source/WebKit:

* NetworkProcess/Classifier/ResourceLoadStatisticsDatabaseStore.cpp:
* NetworkProcess/Classifier/ResourceLoadStatisticsMemoryStore.cpp:
(WebKit::ResourceLoadStatisticsMemoryStore::shouldRemoveAllButCookiesFor const):
* NetworkProcess/Classifier/ResourceLoadStatisticsStore.cpp:
(WebKit::ResourceLoadStatisticsStore::hasStatisticsExpired const):
Zero-initialized local variables.

Canonical link: https://commits.webkit.org/218299@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253359 268f45cc-cd09-0410-ab3c-d52691b4dbfc